--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="logo" style="background-image: url(img/logo-src.svg);"></div>
+    <div class="logo"></div>
     <section class="layers">
         <div class="layers__container">
             <div class="layers__item layer-1" style="background-image: url(img/layer-1.png);"></div>
