--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="hero-content">
                     <h1>Leunets Studio <span></span> </h1>
                     <div class="hero-content__p">Creating yourself & Beautiful with Us</div>
-                    <button class="button-start">Записаться</button>
+                    <a href="/components/component.html" class="button-start">Записаться</button>
                 </div>
             </div>
             <div class="layers__item layer-4">
